# MashMap

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.txt  LICENSE.txt  Makefile.in  README.md  configure.ac
.github/workflows/: build-and-test.yml  build.yml
data/: scerevisiae8.fa.gz.fai  scerevisiae8.fa.gz.gzi
scripts/: MashMap3-evaluation.ipynb  denovo_repeat_annotation.py  evaluate_genome_mappings.py  generateDotPlot  generate_git_version.sh  mashmap-read-analysis.ipynb  test.sh
src/: mashmap_git_version.hpp
src/align/: align.cpp
src/align/include/: align_parameters.hpp  align_types.hpp  align_utils.hpp  computeAlignments.hpp  parseCmdArgs.hpp
src/common/: ALeS.hpp  dset64.hpp  edlib.h  filesystem.hpp  gzstream.h  memcpyLink.h  progress.hpp  rkmh.hpp  seqiter.hpp  utils.cpp  utils.hpp
src/common/sparsehash/: dense_hash_map
src/common/sparsehash/internal/: densehashtable.h
src/interface/: main.cpp  parse_args.hpp  temp_file.hpp
src/map/: mash_map.cpp
src/map/include/: MIIteratorL2.hpp  ThreadPool.hpp  ThreadPool.hpp.backup  base_types.hpp  commonFunc.hpp  computeMap.hpp  filter.hpp  map_parameters.hpp  map_stats.hpp  parseCmdArgs.hpp  slidingMap.hpp  winSketch.hpp
src/winnowed_minhash/: winMinHash.cpp
src/winnowed_minhash/include/: computeJaccard.hpp  parameters.hpp  parseCmdArgs.hpp
